yaml/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-circuitbreaker
  labels:
    istio-injection: enabled
---
