yaml/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxycaller
  namespace: demo-circuitbreaker
spec:
  selector:
    matchLabels:
      app: proxycaller
  replicas: 1
  template:
    metadata:
      name: proxycaller
      labels:
        app: proxycaller
        version: v1
    spec:
      containers:
      - name: proxycaller
        image: ailtonmsj/proxycaller:v1
        imagePullPolicy: Always
