yaml/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxycaller
  namespace: demo-circuitbreaker
spec:
  selector:
    app: proxycaller
  ports:
    - name: http
      port: 8081
  type: ClusterIP
---
