yaml/06-gateway.yml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: proxycaller-gateway
  namespace: demo-circuitbreaker
spec:
  servers:
    - hosts:
        - proxycaller.teste.com.br
      port:
        name: proxycaller-https-443
        number: 443
        protocol: HTTPS
      # TO ENABLE TLS
      tls:
        mode: SIMPLE # enables HTTPS on this port
        credentialName: istio-system/proxycaller-cert-ingress
  selector:
    istio: ingressgateway
