yaml/04-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: proxycaller-vs
  namespace: demo-circuitbreaker
spec:
  hosts:
  - proxycaller.teste.com.br
  gateways:
  - proxycaller-gateway
  http:
  - route:
    - destination:
        host: proxycaller.demo-circuitbreaker.svc.cluster.local
        port:
          number: 8081
        subset: v1
      weight: 100
