yaml/05-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: simpledaproxycallertaredundant-destination-rule
  namespace: demo-circuitbreaker
spec:
  host: proxycaller.demo-circuitbreaker.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
