yaml/07-envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: test-filter
  namespace: demo-circuitbreaker
spec:
  workloadSelector:
    labels:
      app: proxycaller
  configPatches:
    # The first patch adds the lua filter to the listener/http connection manager
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        portNumber: 8081
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value: # lua filter specification
       name: envoy.lua
       typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
          inlineCode: |
            function envoy_on_response(response_handle)
              
              print(">>> LUA TEST INICIO")

              -- Make an HTTP call to an upstream host with the following headers, body, and timeout.
              local httpStatus = tonumber(response_handle:headers():get(":status"))

              -- It is needed
              response_handle:body()

              if (httpStatus >= 500 and httpStatus <= 599) then
                print("ERRO NO BACKEND " ..httpStatus)
                local headers, body = response_handle:httpCall(
                "lua_cluster",
                {
                  [":method"] = "GET",
                  [":path"] = "/",
                  [":authority"] = "simpledataredundant.demo-circuitbreaker.svc.cluster.local"
                },
                "body value",
                2000)

                print("ANTES RESPOSTA")

                local statusCode = "";

                -- NEW HEADERS
                for key, value in pairs(headers) do
                  if(key == ":status") then
                    statusCode = value
                    break
                  end
                end

                print("BODY " ..body)
                print("STATUS CODE " ..statusCode)
 
                local content_length = response_handle:body():setBytes(body)
                response_handle:headers():replace("content-length", content_length)
                response_handle:headers():replace(":status", statusCode)
              end

              print(">>> LUA TEST FIM")
            end
            
  # The second patch adds the cluster that is referenced by the lua code
  # cds match is omitted as a new cluster is being added
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "lua_cluster"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: lua_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    protocol: TCP
                    address: "simpledataredundant.demo-circuitbreaker.svc.cluster.local"
                    port_value: 8080
---


apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: http-server
spec:
  exportTo:
  - demo-circuitbreaker
  hosts:
  - simpledataredundant.demo-circuitbreaker.svc.cluster.local
  #location: MESH_EXTERNAL
  ports:
  - number: 8080
    name: teste
    protocol: http
  #resolution: DNS
  #endpoints:
  #- address: 23.32.228.117
  #- address: 191.252.133.129
  #- address: 2.2.2.2
  #- address: google.com.br
  #- address: simpledataredundant.demo-circuitbreaker.svc.cluster.local
